# NuRea_sim

./: .cursorignore  .gitattributes  .gitignore  Enhanced _Matrix_Orchestrator.py  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  bridge.rb  docker-compose.yml  env.txt  env_file.txt  matrix_integration.py  matrix_orchestrator.py  optimizer_adapter.py  orchestrator.Dockerfile  plan.json  pyproject.toml  pyrightconfig.json  quick-start.sh  requirements-clean.txt  requirements-docker.txt  requirements.txt  requirements_cpu.txt  run_opt.py  set_env.py  setup_environment.bat  setup_environment.py  setup_matrix_integration.bat  setup_windows.bat  test_adapter.py  test_matrix_integration.py
LiMPs/limps-suite-exec-final/services/poly-optimizer-client/: .gitlab-ci.yml  pyproject.toml
carryon/: Dockerfile.julia  Dockerfile.python  Dockerfile.ruby  README.md  docker-compose.yml  kiln.yml
carryon/carryon-mvp-ccl/server/: pyproject.toml  requirements.txt  start.py
carryon/carryon-mvp-ccl/server/app/: __init__.py  main.py
carryon/carryon-mvp-ccl/server/app/config/: settings.py
carryon/carryon-mvp-ccl/server/app/db/: engine.py
carryon/carryon-mvp-ccl/server/app/models/: memory_event.py  soulpack_meta.py
carryon/carryon-mvp-ccl/server/app/retrieval/: __init__.py  graph_store.py  ranker.py  vector_index.py
carryon/carryon-mvp-ccl/server/app/routers/: embeddings.py  health.py  memories.py  prime.py  soulpacks.py  tone.py  tools.py
carryon/carryon-mvp-ccl/server/app/tone/: __init__.py  alignment.py
carryon/carryon-mvp-ccl/server/app/tools/: ccl.py
chaos_rag_single/: Project.toml  server_clean.jl  server_simple.jl  server_vector.jl
hrm_julia_backend/: Dockerfile  Project.toml  README.md  server.jl  setup_guide.md  test_basic.jl  test_simple.jl
ide/: README.md  config.json  main.js  package.json  preload.js
lattice-physics+(pwr+fuel+assembly+neutronics+simulation+results)(1)/: entangle.sh  (+8 more)
(+97 files in other folders)
